refactor(UserService, LocaleHelper): improve string formatting and documentation
- Updated password strength validation message to use String.format for better readability.
- Added unused parameter documentation in LocaleHelper to clarify framework requirements.